// FIXME: this is a copy of /development_server/proto/development.proto

syntax = "proto3";
package development;

service Development {
  rpc Echo(EchoRequest) returns (EchoReply) {};
  rpc DeployComponent(DeployRequest) returns (DeployReply) {};
}

message DeployRequest {
  string component_path = 1;
}

message DeployReply {
  string message = 1;
}

message EchoRequest {
  string message = 1;
}

message EchoReply {
  string message = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
 string name = 1;
}

message HelloReply {
  string message = 1;
}
